; ModuleID = '/home/carl/AnghaBench/HandBrake/gtk/src/extr_hb-backend.c_filter_opt_get2.c'
source_filename = "/home/carl/AnghaBench/HandBrake/gtk/src/extr_hb-backend.c_filter_opt_get2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*, i32*, i32, i32, i32)* @filter_opt_get2 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @filter_opt_get2(i8* %0, i32* %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i8*, align 8
  store i8* %0, i8** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i32* null, i32** %12, align 8
  %16 = load i32, i32* %11, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %21

18:                                               ; preds = %5
  %19 = load i32, i32* %10, align 4
  %20 = call i32* @hb_filter_param_get_presets(i32 %19)
  store i32* %20, i32** %13, align 8
  br label %24

21:                                               ; preds = %5
  %22 = load i32, i32* %10, align 4
  %23 = call i32* @hb_filter_param_get_tunes(i32 %22)
  store i32* %23, i32** %13, align 8
  br label %24

24:                                               ; preds = %21, %18
  %25 = load i32, i32* %9, align 4
  switch i32 %25, label %38 [
    i32 130, label %26
    i32 131, label %26
    i32 129, label %26
    i32 128, label %32
  ]

26:                                               ; preds = %24, %24, %24
  %27 = load i32*, i32** %13, align 8
  %28 = load i32*, i32** %8, align 8
  %29 = call i32 @lookup_param_int(i32* %27, i32* %28)
  store i32 %29, i32* %14, align 4
  %30 = load i32, i32* %14, align 4
  %31 = call i32* @ghb_int_value_new(i32 %30)
  store i32* %31, i32** %6, align 8
  br label %40

32:                                               ; preds = %24
  %33 = load i32*, i32** %13, align 8
  %34 = load i32*, i32** %8, align 8
  %35 = call i8* @lookup_param_option(i32* %33, i32* %34)
  store i8* %35, i8** %15, align 8
  %36 = load i8*, i8** %15, align 8
  %37 = call i32* @ghb_string_value_new(i8* %36)
  store i32* %37, i32** %6, align 8
  br label %40

38:                                               ; preds = %24
  %39 = load i32*, i32** %12, align 8
  store i32* %39, i32** %6, align 8
  br label %40

40:                                               ; preds = %38, %32, %26
  %41 = load i32*, i32** %6, align 8
  ret i32* %41
}

declare dso_local i32* @hb_filter_param_get_presets(i32) #1

declare dso_local i32* @hb_filter_param_get_tunes(i32) #1

declare dso_local i32 @lookup_param_int(i32*, i32*) #1

declare dso_local i32* @ghb_int_value_new(i32) #1

declare dso_local i8* @lookup_param_option(i32*, i32*) #1

declare dso_local i32* @ghb_string_value_new(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
